Fixed table caption alignment

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -29,6 +29,8 @@ table
     padding: 1px 10px 3px 7px
 
 .dataList
+  caption
+    text-align: left
   td
     border-bottom: 1px solid #CCCCCC
   tr:hover td
