--- a/public/stylesheets/sass/sprints/show.sass
+++ b/public/stylesheets/sass/sprints/show.sass
@@ -1,4 +1,6 @@
 table#kanban
+  caption
+    text-align: left
   th
     text-align: center
   td
